[tool.poetry]
name = "pycronie"
version = "0.1.0"
description = "A project to manage cron jobs."
authors = ["Robin Lösch <robin@chilio.net>"]
license = "MIT"
repository = "https://github.com/yourusername/cronie"
keywords = ["cron", "scheduler", "parser"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"