[tool.poetry]
name = "pycronie"
version = "0.1.0"
description = "A project to manage cron jobs."
authors = ["Robin Lösch <robin@chilio.net>"]
license = "MIT"
repository = "https://github.com/yourusername/cronie"
keywords = ["cron", "scheduler", "parser"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
mypy-extensions = "^1.0.0"
pylint = "^3.3.3"
pylint-pytest = "^1.1.8"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

